--- a/index.Rmd
+++ b/index.Rmd
@@ -50,10 +50,11 @@ class_diag <- function(score, truth, positive, cutoff=.5){
 
 ### Introduction 
 
-*I chose this data set because it contains data from the Veteran’s Administration Lung Cancer Trial (Kalbfleisch and Prentice). I thought it was interesting because it shows if treatment helped patients. The data are described here. Treatment denotes the type of lung cancer treatment; 1 (standard) and 2 (test drug). CellType denotes the type of cell involved; 1 (squamous), 2 (small cell), 3 (adeno), 4 (large). Survival is the survival time in days since the treatment. Status denotes the status of the patient as dead or alive; 1 (dead), 0 (alive). Karnofsky is the Karnofsky score. Diag is the time since diagnosis in months. Age is the age in years. Therapy denotes any prior therapy; 0 (none), 10 (yes). There are 8 variables and 137 observations for each. There are 1096 observations in total.* 
+*I chose this data set because it contains data from the Veteran’s Administration Lung Cancer Trial (Kalbfleisch and Prentice). I thought it was interesting because it shows if treatment helped patients. The data are described here. Treatment denotes the type of lung cancer treatment; 1 (standard) and 2 (test drug). Cell Type denotes the type of cell involved; 1 (squamous), 2 (small cell), 3 (adeno), 4 (large). Survival is the survival time in days since the treatment. Status denotes the status of the patient as dead or alive; 1 (dead), 0 (alive). Karnofsky is the Karnofsky score. Diag is the time since diagnosis in months. Age is the age in years. Therapy denotes any prior therapy; 0 (none), 10 (yes). There are 8 variables and 137 observations for each. There are 1096 observations in total.* 
 
 ```{R}
-library(tidyverse)
+library(dplyr)
+library(ggplot2)
 VA <- MASS::VA
 ```
 
@@ -201,20 +202,26 @@ mean(diags)
 
 ### Python 
 
-```{python}
+```{R}
+library(reticulate)
+use_python("/usr/bin/python3")
 
+```
+
+```{python}
+VA =r.VA
 ```
 
 ```{R}
 library(reticulate)
-#py$VA
+py$VA
+min(py$VA$stime)
+min(py$VA$age)
+max(py$VA$stime)
+max(py$VA$age)
 ```
 
-```{python}
-
-```
-
-Discussion
+*Unfortunately, I was unable to make this data set a py file due to it no being a data frame. Due to this, I accessed this dataset through python with "r." By using min and max functions in r, I selected two of the numeric variables age and stime to determine if there were any outliers present in the data. It is apparent that at least one outlier was present in the data as one patient had a total of 999 follow-up days. The minimum amount of days spent survivng or in follow-up was 1 day. The youngest person in this study was 34 and the oldest was 81. This is really intersting because although this can all be done in R without python. This shows thaht Python and R can communicate.*
 
 
 
